--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "webpack-node-externals": "1.7.2"
   },
   "dependencies": {
+    "http-status-codes": "1.3.0",
     "mongoose": "5.3.13",
     "serialize-error": "3.0.0"
   },
