--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/plugin-proposal-object-rest-spread": "7.0.0",
     "@babel/plugin-transform-runtime": "7.1.0",
     "@babel/preset-env": "7.1.6",
+    "@babel/runtime": "7.1.5",
     "babel-loader": "8.0.4",
     "run.env": "1.1.0",
     "serverless": "1.33.2",
