--- a/package.json
+++ b/package.json
@@ -36,6 +36,6 @@
     "serialize-error": "3.0.0"
   },
   "scripts": {
-    "start": "run.env serverless offline start --skipCacheInvalidation"
+    "start": "run.env serverless offline start"
   }
 }
