--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "http-status-codes": "1.3.0",
+    "isarray": "2.0.4",
     "mongoose": "5.3.13",
     "serialize-error": "3.0.0"
   },
