--- a/package.json
+++ b/package.json
@@ -31,10 +31,14 @@
     "webpack-node-externals": "1.7.2"
   },
   "dependencies": {
+    "bcrypt": "3.0.2",
     "http-status-codes": "1.3.0",
     "isarray": "2.0.4",
     "mongoose": "5.3.13",
-    "serialize-error": "3.0.0"
+    "ms": "2.1.1",
+    "serialize-error": "3.0.0",
+    "shorthash": "0.0.2",
+    "uuid": "3.3.2"
   },
   "scripts": {
     "start": "run.env serverless offline start"
