--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "isarray": "2.0.4",
     "mongoose": "5.3.13",
     "ms": "2.1.1",
+    "namor": "1.1.1",
     "serialize-error": "3.0.0",
     "shorthash": "0.0.2",
     "uuid": "3.3.2"
