--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bcrypt": "3.0.2",
     "http-status-codes": "1.3.0",
     "isarray": "2.0.4",
+    "joi": "14.3.0",
     "mongoose": "5.3.13",
     "ms": "2.1.1",
     "namor": "1.1.1",
