PATCH /projects/{projectIdentifier}

--- a/serverless.yml
+++ b/serverless.yml
@@ -112,12 +112,12 @@ functions:
           path: /projects
           method: post
 
-  PROJECT___replace:
-    handler: src/handler.PROJECT___replace
+  PROJECT___update:
+    handler: src/handler.PROJECT___update
     events:
       - http:
           path: /projects/{projectIdentifier}
-          method: put
+          method: patch
 
   PROJECT___delete:
     handler: src/handler.PROJECT___delete
