- Create file and get file

--- a/.example.env
+++ b/.example.env
@@ -5,3 +5,6 @@ RABBITMQ_URI=amqp://rabbitmq
 RABBITMQ_EXCHANGE=
 RABBITMQ_PREFIX=
 RABBITMQ_TTL=5s
+
+AWS_ELASTICSEARCH_HOST=
+AWS_ELASTICSEARCH_PREFIX=
