--- a/document/account.yml
+++ b/document/account.yml
@@ -31,6 +31,7 @@ components:
           type: string
         email:
           type: string
+          format: email
         name:
           type: string
         isActive:
@@ -84,6 +85,7 @@ paths:
               properties:
                 email:
                   type: string
+                  format: email
       responses:
         '201':
           description: CREATED
@@ -197,6 +199,7 @@ paths:
               properties:
                 email:
                   type: string
+                  format: email
       responses:
         '201':
           description: CREATED
